modify main color

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -443,7 +443,7 @@
     margin-bottom: 8px;
   }
   .main-navbar.app-nav .nav-btn .bg-main {
-    background-color: #567df4;
+    background-color: #1474D2;
     color: #ffffff;
   }
   .app-banner-area {
