--- a/public/css/responsive.scss
+++ b/public/css/responsive.scss
@@ -553,7 +553,7 @@
             .nav-btn {
                 margin-bottom: 8px;
                 .bg-main {
-                    background-color: #567df4;
+                    background-color: #1474D2;
                     color: #ffffff;
                 }
             }
