modify second color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,12 +219,12 @@ Saas Landing CSS
 }
 
 .main-navbar .nav-btn .default-btn.bg-main:hover {
-  background-color: #301d44;
+  background-color: #FD4C5C;
   color: #ffffff;
 }
 
 .main-navbar .nav-btn .default-btn.bg-color {
-  background-color: #301d44;
+  background-color: #FD4C5C;
   color: #ffffff;
 }
 
