--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -148,7 +148,7 @@ Saas Landing CSS
 
     .navbar-nav {
         .nav-link {
-            color: #301d44;
+            color: #FD4C5C;
             padding-left: 0;
             padding-right: 0;
             padding-bottom: 10px;
@@ -190,12 +190,12 @@ Saas Landing CSS
                 background-color: $main-color;
                 color: $white-color;
                 &:hover {
-                    background-color: #301d44;
+                    background-color: #FD4C5C;
                     color: $white-color;
                 }
             }
             &.bg-color {
-                background-color: #301d44;
+                background-color: #FD4C5C;
                 color: $white-color;
             }
             &:hover {
@@ -3465,7 +3465,7 @@ Demo Area Style
             padding-right: 5px;
             text-transform: uppercase;
             color: $white-color;
-            background-color: #301d44;
+            background-color: #FD4C5C;
             padding: 10px 7px;
             border-radius: 5px 0 0 5px;
             transition: $transition;
