modify text and  styles to landing page

--- a/public/css/rtl.scss
+++ b/public/css/rtl.scss
@@ -315,7 +315,7 @@
     .saas-banner-area {
         .saas-banner-img {
             .saas-img-2 {
-                left: 140px;
+                left: auto;
                 right: auto;
             }
         }
