--- a/public/css/style.css
+++ b/public/css/style.css
@@ -223,7 +223,7 @@ Saas Landing CSS
   color: #ffffff;
 }
 
-.main-navbar .nav-btn .default-btn.bg-color {
+.main-navbar .nav-btn .default-btn.bg-red {
   background-color: #FD4C5C;
   color: #ffffff;
 }
@@ -332,10 +332,18 @@ Saas Landing CSS
   margin: 0 auto 5px;
 }
 
-.saas-banner-area .saas-banner-btn .default-btn.bg-white:hover {
+.saas-banner-area .saas-banner-btn .default-btn.bg-white {
   background-color: #FD4C5C !important;
   color: #ffffff;
-  border: 1px solid #242424;
+  border: 1px solid #FD4C5C;
+  -webkit-box-shadow: 0px 20px 20px 0px #3f61b8;
+          box-shadow: 0px 20px 20px 0px #3f61b8;
+}
+
+.saas-banner-area .saas-banner-btn .default-btn.bg-white:hover {
+  background-color: #ffffff !important;
+  color: #1474D2;
+  border: 1px solid #1474D2;
   -webkit-box-shadow: 0px 20px 20px 0px #3f61b8;
           box-shadow: 0px 20px 20px 0px #3f61b8;
 }
@@ -459,6 +467,7 @@ Saas Landing CSS
   border-radius: 10px;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  min-height: 320px;
 }
 
 .saas-service-card .icon {
@@ -557,8 +566,8 @@ Saas Landing CSS
           animation-timing-function: linear;
 }
 
-/* Paricing Area */
-.prising-card {
+/* Pricing Area */
+.pricing-card {
   padding: 30px 20px;
   -webkit-box-shadow: 0px 0px 20px #eeeeee;
           box-shadow: 0px 0px 20px #eeeeee;
@@ -567,16 +576,17 @@ Saas Landing CSS
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   margin-bottom: 30px;
+  min-height: 600px;
 }
 
-.prising-card .price-header {
+.pricing-card .price-header {
   padding-bottom: 20px;
   border-bottom: 1px solid #e1e1e1;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
-.prising-card .price-header h3 {
+.pricing-card .price-header h3 {
   font-size: 22px;
   margin-bottom: 15px;
   line-height: 1;
@@ -584,7 +594,7 @@ Saas Landing CSS
   transition: all 0.5s;
 }
 
-.prising-card .price-header h4 {
+.pricing-card .price-header h4 {
   font-size: 36px;
   margin-bottom: 10px;
   color: #1474D2;
@@ -592,13 +602,14 @@ Saas Landing CSS
   transition: all 0.5s;
 }
 
-.prising-card ul {
+.pricing-card ul {
   padding: 0;
   margin: 35px 0 0 50px;
   list-style-type: none;
+  min-height: 320px;
 }
 
-.prising-card ul li {
+.pricing-card ul li {
   font-size: 18px;
   color: #242424;
   margin-bottom: 5px;
@@ -608,11 +619,11 @@ Saas Landing CSS
   transition: all 0.5s;
 }
 
-.prising-card ul li:last-child {
+.pricing-card ul li:last-child {
   margin-bottom: 0;
 }
 
-.prising-card ul li i {
+.pricing-card ul li i {
   color: #1474D2;
   position: absolute;
   left: 0;
@@ -621,69 +632,69 @@ Saas Landing CSS
   transition: all 0.5s;
 }
 
-.prising-card ul li.not-provide {
+.pricing-card ul li.not-provide {
   color: #7d7d7d;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
-.prising-card ul li.not-provide i {
+.pricing-card ul li.not-provide i {
   color: #7d7d7d;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
-.prising-card .price-btn {
+.pricing-card .price-btn {
   margin-top: 30px;
 }
 
-.prising-card .price-btn .default-btn {
+.pricing-card .price-btn .default-btn {
   border: 1px solid #1474D2;
 }
 
-.prising-card .price-btn .default-btn:hover {
+.pricing-card .price-btn .default-btn:hover {
   background-color: #1474D2;
   color: #ffffff;
 }
 
-.prising-card:hover, .prising-card.active {
+.pricing-card:hover, .pricing-card.active {
   background-color: #1474D2;
   margin-top: -8px;
 }
 
-.prising-card:hover .price-header, .prising-card.active .price-header {
+.pricing-card:hover .price-header, .pricing-card.active .price-header {
   border-bottom: 1px solid #809bee;
 }
 
-.prising-card:hover .price-header h3, .prising-card.active .price-header h3 {
+.pricing-card:hover .price-header h3, .pricing-card.active .price-header h3 {
   color: #ffffff;
 }
 
-.prising-card:hover .price-header h4, .prising-card.active .price-header h4 {
+.pricing-card:hover .price-header h4, .pricing-card.active .price-header h4 {
   color: #ffffff;
 }
 
-.prising-card:hover .price-header p, .prising-card.active .price-header p {
+.pricing-card:hover .price-header p, .pricing-card.active .price-header p {
   color: #d6ddfc;
 }
 
-.prising-card:hover ul li, .prising-card.active ul li {
+.pricing-card:hover ul li, .pricing-card.active ul li {
   color: #ffffff;
 }
 
-.prising-card:hover ul li i, .prising-card.active ul li i {
+.pricing-card:hover ul li i, .pricing-card.active ul li i {
   color: #ffffff;
 }
 
-.prising-card:hover ul li.not-provide, .prising-card.active ul li.not-provide {
+.pricing-card:hover ul li.not-provide, .pricing-card.active ul li.not-provide {
   color: #efefef;
 }
 
-.prising-card:hover ul li.not-provide i, .prising-card.active ul li.not-provide i {
+.pricing-card:hover ul li.not-provide i, .pricing-card.active ul li.not-provide i {
   color: #efefef;
 }
 
-.prising-card:hover .price-btn .default-btn, .prising-card.active .price-btn .default-btn {
+.pricing-card:hover .price-btn .default-btn, .pricing-card.active .price-btn .default-btn {
   border: 1px solid #242424;
   background-color: #242424;
   color: #ffffff;
@@ -744,6 +755,43 @@ Saas Landing CSS
 
 .saas-features:hover .icon i {
   top: 5px;
+}
+
+/*  Registration Campaign  CSS */
+
+.registration-campaign-app {
+  background-color: #1474D2;
+  margin: auto;
+}
+
+.registration-campaign-app .section-title h2 {
+  color: #ffffff;
+}
+.registration-campaign-app .saas-registration-btn{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.registration-campaign-app .saas-registration-btn .default-btn.bg-red {
+  background-color: #FD4C5C !important;
+  color: #ffffff;
+  border: 1px solid #FD4C5C;
+  -webkit-box-shadow: 0px 20px 20px 0px #3f61b8;
+          box-shadow: 0px 20px 20px 0px #3f61b8;
+}
+.description_campaign {
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.description_campaign p {
+  color: #fbfbfb;
+  text-align: center;
+}
+
+.count-down h3 {
+  color: #fbfbfb;
+  text-align: center;
 }
 
 /* Personal Area CSS */
@@ -981,16 +1029,20 @@ Saas Landing CSS
 .clients-area .clients-slider .clients-slider-item .client-text .rating {
   margin-bottom: 10px;
   color: #ffc700;
+  display: flex;
+  justify-content: end;
 }
 
 .clients-area .clients-slider .clients-slider-item .client-text h3 {
   font-size: 20px;
   margin-bottom: 5px;
+  text-align: end;
 }
 
-.clients-area .clients-slider .clients-slider-item .client-text span {
+.clients-area .clients-slider .clients-slider-item .client-text p {
   font-size: 12px;
   font-weight: 400;
+  text-align: end;
 }
 
 .clients-area .clients-slider .clients-slider-item .client-image {
@@ -1004,7 +1056,7 @@ Saas Landing CSS
 
 .clients-area .clients-slider.owl-theme .owl-nav {
   margin: 0;
-  text-align: left;
+  text-align: center;
   position: absolute;
   left: 30px;
   bottom: 0;
@@ -1908,6 +1960,12 @@ SEO Marketing CSS
 .our-pricing-area .pric-tabe:hover .price-btn .bg-color {
   background-color: #FD4C5C;
   border: 1px solid #FD4C5C;
+}
+
+.our-pricing-area .pric-tabe .price-btn .bg-color {
+  background-color: #1474D2;
+  border: 1px solid #1474D2;
+  color:white
 }
 
 .pricing-tab .tabs {
