--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -132,10 +132,10 @@
   .saas-features .icon i {
     top: -20px;
   }
-  .prising-card ul {
+  .pricing-card ul {
     margin: 30px 0 0 20px;
   }
-  .prising-card ul li {
+  .pricing-card ul li {
     font-size: 15px;
   }
   .testimonials-area .section-title {
@@ -619,13 +619,13 @@
     text-align: center;
   }
   /* Seo Marketing Responsive */
-  .prising-card {
+  .pricing-card {
     padding: 20px 15px;
   }
-  .prising-card ul {
+  .pricing-card ul {
     margin: 15px 0 0 0;
   }
-  .prising-card ul li {
+  .pricing-card ul li {
     font-size: 15px;
   }
   .case-study-card .caption {
@@ -688,7 +688,7 @@
   .main-navbar.startup-nav .navbar-nav .nav-link {
     text-align: center;
   }
-  .prising-card ul li {
+  .pricing-card ul li {
     font-size: 16px;
   }
   /* SaaS Responsive */
@@ -874,7 +874,7 @@
   .main-navbar.startup-nav {
     background-color: #9a2ec1;
   }
-  .prising-card ul {
+  .pricing-card ul {
     margin: 35px 0 0 40px;
   }
   .startup-banner-area .container {
@@ -1109,10 +1109,10 @@
   .subscribe-area .subscribe-contant .subscrive-text h3 {
     font-size: 30px;
   }
-  .prising-card ul {
+  .pricing-card ul {
     margin: 25px 0 0 25px;
   }
-  .prising-card ul li {
+  .pricing-card ul li {
     font-size: 16px;
   }
   .modal-video-body {
