--- a/public/css/responsive.scss
+++ b/public/css/responsive.scss
@@ -162,7 +162,7 @@
             }
         }
     }
-    .prising-card {
+    .pricing-card {
         ul {
             margin: 30px 0 0 20px;
             li {
@@ -787,7 +787,7 @@
     }
 
     /* Seo Marketing Responsive */
-    .prising-card {
+    .pricing-card {
         padding: 20px 15px;
         ul {
             margin: 15px 0 0 0;
@@ -884,7 +884,7 @@
             }
         }
     }
-    .prising-card {
+    .pricing-card {
         ul {
             li {
                 font-size: 16px;
@@ -1147,7 +1147,7 @@
             background-color: #9a2ec1;
         }
     }
-    .prising-card {
+    .pricing-card {
         ul {
             margin: 35px 0 0 40px;
         }
@@ -1505,7 +1505,7 @@
             }
         }
     }
-    .prising-card {
+    .pricing-card {
         ul {
             margin: 25px 0 0 25px;
             li {
