--- a/public/css/rtl.scss
+++ b/public/css/rtl.scss
@@ -393,7 +393,7 @@
         }
     }
     
-    .prising-card {
+    .pricing-card {
         ul {
             margin: 35px 50px 0 0;
             li {
@@ -735,7 +735,7 @@
         .saas-feature-two {
             padding-left: 0;
         }
-        .prising-card {
+        .pricing-card {
             ul {
                 margin: 25px 0px 0 0;
             }
@@ -743,7 +743,7 @@
     }
     
     @media only screen and (max-width : 575px) {
-        .prising-card {
+        .pricing-card {
             padding: 15px 0;
             ul {
                 margin: 35px 25px 0 0;;
@@ -856,7 +856,7 @@
                 }
             }
         }
-        .prising-card {
+        .pricing-card {
             ul {
                 margin: 35px 30px 0 0;
             }
