--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -480,7 +480,7 @@ Saas Landing CSS
 }
 
 /* Paricing Area */
-.prising-card {
+.pricing-card {
     padding: 30px 20px;
     box-shadow: 0px 0px 20px #eeeeee;
     border-radius: 10px;
