--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1474,46 +1474,16 @@ Saas Landing CSS
   margin-bottom: 25px;
 }
 
-.contact-area .contact-content .form-group .form-control {
-  height: 60px;
-  padding: 10px 20px;
-  background-color: #f5f5f5;
-  color: #242424;
-  border: 1px solid #f5f5f5;
-  border-radius: 10px;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.contact-area .contact-content .form-group textarea.form-control {
-  height: auto !important;
-}
-
-.contact-area .contact-content .form-group .with-errors .list-unstyled {
-  padding: 0;
-  margin: 10px 0 0;
-}
-
-.contact-area .contact-content .form-group .with-errors .list-unstyled li {
-  color: #ff0000;
-}
-
 .contact-area .contact-content .default-btn {
-  background-color: #1474D2;
+  background-color: #FD4C5C;
   color: #ffffff;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
 .contact-area .contact-content .default-btn:hover {
-  background-color: #242424;
+  background-color: #1474D2;
   color: #ffffff;
-}
-
-.contact-area .contact-content .text-danger {
-  color: #ff0000 !important;
-  margin-top: 15px;
-  margin-bottom: 0;
 }
 
 /* Go top */
