add  LOGIN_PLATFORM_URL and REGISTER_PLATFORM_URL

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -28,8 +28,8 @@
     padding-top: 120px;
     padding-bottom: 30px;
   }
-  .saas-banner-area .saas-banner-content span {
-    font-size: 13px;
+  .saas-banner-area .saas-banner-content h4 {
+    font-size: 18px;
   }
   .saas-banner-area .saas-banner-content h1 {
     font-size: 30px;
