--- a/public/css/style.css
+++ b/public/css/style.css
@@ -727,8 +727,22 @@ Saas Landing CSS
   display: flex;
   flex-direction: row;
   justify-content:center;
-  min-height: 100px;
+  min-height: 80px;
   gap:30px
+}
+
+.container-select-number-projects{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.container-number-projects{
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  gap:20px
 }
 
 /* Estilo del checkbox oculto */
