add videos in landing page

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -756,7 +756,7 @@ Saas Landing CSS
         display: inline-block;
 
         .ripple {
-            background-color: rgba(86, 125, 244, .3);
+            background-color: #FD4C5C;
             position: absolute;
             width: 100px;
             height: 100px;
