--- a/public/css/style.css
+++ b/public/css/style.css
@@ -742,7 +742,8 @@ Saas Landing CSS
   display: flex;
   flex-direction: row;
   justify-content:center;
-  gap:20px
+  gap:40px;
+  margin-bottom: 20px;
 }
 
 /* Estilo del checkbox oculto */
